--- a/LAB4/L4_3.ipynb
+++ b/LAB4/L4_3.ipynb
@@ -92,7 +92,7 @@
     "            s_dist.append(d)\n",
     "            print('s_dist', s_dist)\n",
     "\n",
-    "        return min(s_dist)\n",
+    "        return min(s_dist, default=0)\n",
     "\n",
     "print('Distance between:', (0, 3))\n",
     "print(dist(0, 3, g))\n",
