--- a/LAB4/L4_1.ipynb
+++ b/LAB4/L4_1.ipynb
@@ -271,7 +271,7 @@
    "hash": "1f89e5638bc21e5a353878479e7a3da0844c21839df4668e59f62c45fd240760"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -286,8 +286,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
