--- a/Lista_6_PD.ipynb
+++ b/Lista_6_PD.ipynb
@@ -531,25 +531,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'id': '1101', 'typ': 'VCV', 'masa': 1016, 'roz': 10}, {'id': '1101', 'typ': 'WCC', 'masa': 1032, 'roz': 19}, {'id': '1111', 'typ': 'NNU', 'masa': 138, 'roz': 23}, {'id': '1011', 'typ': 'GUG', 'masa': 520, 'roz': 25}, {'id': '0010', 'typ': 'UCA', 'masa': 1878, 'roz': 14}, {'id': '0101', 'typ': 'GNU', 'masa': 1835, 'roz': 22}, {'id': '0100', 'typ': 'VUN', 'masa': 1002, 'roz': 15}, {'id': '1110', 'typ': 'VGC', 'masa': 1194, 'roz': 16}, {'id': '0010', 'typ': 'GCU', 'masa': 1340, 'roz': 25}, {'id': '0111', 'typ': 'GCN', 'masa': 1170, 'roz': 9}]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'linear_probing' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_536/2218458974.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrobots\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlinear_probing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrobots\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'linear_probing' is not defined"
+      "[{'id': '0010', 'typ': 'GUG', 'masa': 728, 'roz': 3}, {'id': '0011', 'typ': 'AWC', 'masa': 1995, 'roz': 7}, {'id': '1111', 'typ': 'GAG', 'masa': 1468, 'roz': 6}, {'id': '0111', 'typ': 'NCN', 'masa': 1046, 'roz': 19}, {'id': '0110', 'typ': 'WAA', 'masa': 1628, 'roz': 18}, {'id': '0011', 'typ': 'AUN', 'masa': 1844, 'roz': 28}, {'id': '0111', 'typ': 'WAU', 'masa': 592, 'roz': 15}, {'id': '0010', 'typ': 'CGA', 'masa': 1564, 'roz': 20}, {'id': '0110', 'typ': 'UNW', 'masa': 401, 'roz': 18}, {'id': '1000', 'typ': 'UWU', 'masa': 1719, 'roz': 3}]\n",
+      "[{'id': '0110', 'typ': 'WAA', 'masa': 1628, 'roz': 18}, {'id': '0111', 'typ': 'WAU', 'masa': 592, 'roz': 15}, {'id': '0110', 'typ': 'UNW', 'masa': 401, 'roz': 18}, {'id': '0010', 'typ': 'CGA', 'masa': 1564, 'roz': 20}, {'id': '0011', 'typ': 'AUN', 'masa': 1844, 'roz': 28}, {'id': '1000', 'typ': 'UWU', 'masa': 1719, 'roz': 3}, {'id': '1111', 'typ': 'GAG', 'masa': 1468, 'roz': 6}, {'id': '0111', 'typ': 'NCN', 'masa': 1046, 'roz': 19}, {'id': '0010', 'typ': 'GUG', 'masa': 728, 'roz': 3}, {'id': '0011', 'typ': 'AWC', 'masa': 1995, 'roz': 7}]\n"
      ]
     }
    ],
@@ -558,7 +548,7 @@
     "robots = [r.save_robot() for r in robots]\n",
     "\n",
     "print(robots)\n",
-    "print(linear_probing(robots))"
+    "print(gww(robots))"
    ]
   },
   {
@@ -778,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,11 +835,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def binary_search(vector, features):\n",
+    "def search(vector, features):\n",
     "    \"\"\"\n",
     "    Binarne wyszukiwanie \n",
     "    :param vector: wektor robotów\n",
@@ -873,7 +863,6 @@
     "                    feature=list(features.keys())[n]\n",
     "                                     )\n",
     "            indexes.append(temp_i)\n",
-    "            print(indexes)\n",
     "    \n",
     "    indexes = intersection(indexes)\n",
     "    return indexes"
@@ -881,30 +870,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
-    "robots = create_m_bots(25)\n",
+    "robots = create_m_bots(30)\n",
     "robots = [r.save_robot() for r in robots]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4, 14, 10, 15]]\n",
-      "[[4, 14, 10, 15], [15, 23, 18, 0, 17, 3, 6, 10]]\n",
-      "{10, 15}\n"
+      "{1, 21, 5}\n"
      ]
     }
    ],
    "source": [
+    "# pożadane cechy\n",
     "desired_features = {\n",
     "    'id': ['0011','0101'],\n",
     "    'typ': None,\n",
@@ -912,39 +900,33 @@
     "    'roz': [10, 11, 12, 13, 14, 15, 16, 17, 18],\n",
     "}\n",
     "\n",
-    "result_i = binary_search(robots, desired_features)"
+    "result_i = search(robots, desired_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{10, 15}\n",
-      "{'id': '0101', 'typ': 'GCN', 'masa': 362, 'roz': 18}\n",
-      "{'id': '0101', 'typ': 'AAC', 'masa': 1297, 'roz': 10}\n"
+      "Indexy robotów spełniajaćych kryteria\n",
+      "{1, 21, 5}\n",
+      "Roboty spełniające wymagania\n",
+      "{'id': '0011', 'typ': 'WCW', 'masa': 1974, 'roz': 11}\n",
+      "{'id': '0101', 'typ': 'UNU', 'masa': 1415, 'roz': 16}\n",
+      "{'id': '0101', 'typ': 'WUU', 'masa': 750, 'roz': 12}\n"
      ]
     }
    ],
    "source": [
+    "print('Indexy robotów spełniajaćych kryteria')\n",
     "print(result_i)\n",
+    "print('Roboty spełniające wymagania')\n",
     "for i in result_i:\n",
     "    print(robots[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(desired_features)\n",
-    "for n in binary_search(robots, features=desired_features):\n",
-    "    print(robots[n])"
    ]
   }
  ],
