--- a/Lista_6_PD.ipynb
+++ b/Lista_6_PD.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,27 +126,27 @@
      "output_type": "stream",
      "text": [
       "     id  typ    masa   roz\n",
-      "0  1001  UAV  1074.0  19.0\n",
-      "1  1101  UGU  1992.0  23.0\n",
-      "2  0100  AWG   503.0  25.0\n",
-      "3  0100  GGV   310.0  26.0\n",
-      "4  0000  WNA   731.0  21.0\n",
-      "5  1100  WWW  1777.0  17.0\n",
-      "6  0100  GNG  1145.0   1.0\n",
-      "7  1010  GAN   569.0  12.0\n",
-      "8  0110  VUG  1155.0   1.0\n",
-      "9  1101  NWG   495.0  21.0\n",
+      "0  1011  AWA   789.0   1.0\n",
+      "1  0100  UGC  1253.0  11.0\n",
+      "2  0001  WGG  1643.0  17.0\n",
+      "3  1100  WNW  1758.0  14.0\n",
+      "4  1100  VNC   271.0  25.0\n",
+      "5  1111  VWV  1769.0   9.0\n",
+      "6  1101  VAA  1547.0  18.0\n",
+      "7  1011  WVG   142.0   4.0\n",
+      "8  1011  VNV   311.0  25.0\n",
+      "9  0100  VVW  1158.0  16.0\n",
       "   Unnamed: 0    id  typ    masa   roz\n",
-      "0           0  1001  UAV  1074.0  19.0\n",
-      "1           1  1101  UGU  1992.0  23.0\n",
-      "2           2   100  AWG   503.0  25.0\n",
-      "3           3   100  GGV   310.0  26.0\n",
-      "4           4     0  WNA   731.0  21.0\n",
-      "5           5  1100  WWW  1777.0  17.0\n",
-      "6           6   100  GNG  1145.0   1.0\n",
-      "7           7  1010  GAN   569.0  12.0\n",
-      "8           8   110  VUG  1155.0   1.0\n",
-      "9           9  1101  NWG   495.0  21.0\n"
+      "0           0  1011  AWA   789.0   1.0\n",
+      "1           1   100  UGC  1253.0  11.0\n",
+      "2           2     1  WGG  1643.0  17.0\n",
+      "3           3  1100  WNW  1758.0  14.0\n",
+      "4           4  1100  VNC   271.0  25.0\n",
+      "5           5  1111  VWV  1769.0   9.0\n",
+      "6           6  1101  VAA  1547.0  18.0\n",
+      "7           7  1011  WVG   142.0   4.0\n",
+      "8           8  1011  VNV   311.0  25.0\n",
+      "9           9   100  VVW  1158.0  16.0\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,35 +354,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': '1001', 'typ': 'WGC', 'masa': 850, 'roz': 11},\n",
-       " {'id': '1101', 'typ': 'UAG', 'masa': 1268, 'roz': 17},\n",
-       " {'id': '1001', 'typ': 'AWN', 'masa': 1227, 'roz': 26},\n",
-       " {'id': '1110', 'typ': 'AWU', 'masa': 884, 'roz': 5},\n",
-       " {'id': '1000', 'typ': 'NAU', 'masa': 377, 'roz': 16},\n",
-       " {'id': '0111', 'typ': 'WWU', 'masa': 609, 'roz': 1},\n",
-       " {'id': '1010', 'typ': 'UUW', 'masa': 1120, 'roz': 12},\n",
-       " {'id': '1100', 'typ': 'WGA', 'masa': 537, 'roz': 1},\n",
-       " {'id': '0000', 'typ': 'AUW', 'masa': 723, 'roz': 24},\n",
-       " {'id': '1100', 'typ': 'CAA', 'masa': 309, 'roz': 14},\n",
-       " {'id': '0100', 'typ': 'CWG', 'masa': 856, 'roz': 23},\n",
-       " {'id': '1100', 'typ': 'AGV', 'masa': 211, 'roz': 14},\n",
-       " {'id': '1111', 'typ': 'WNV', 'masa': 1907, 'roz': 11},\n",
-       " {'id': '0001', 'typ': 'WNC', 'masa': 1866, 'roz': 21},\n",
-       " {'id': '1111', 'typ': 'WNV', 'masa': 468, 'roz': 25},\n",
-       " {'id': '0000', 'typ': 'GNU', 'masa': 1238, 'roz': 3},\n",
-       " {'id': '1001', 'typ': 'WVG', 'masa': 1244, 'roz': 4},\n",
-       " {'id': '0110', 'typ': 'VWU', 'masa': 1521, 'roz': 17},\n",
-       " {'id': '1110', 'typ': 'CVA', 'masa': 1668, 'roz': 3},\n",
-       " {'id': '1001', 'typ': 'UNV', 'masa': 586, 'roz': 22}]"
+       "[{'id': '1100', 'typ': 'VUA', 'masa': 1411, 'roz': 12},\n",
+       " {'id': '0000', 'typ': 'CAC', 'masa': 387, 'roz': 28},\n",
+       " {'id': '0001', 'typ': 'AAC', 'masa': 1197, 'roz': 28},\n",
+       " {'id': '1011', 'typ': 'AGV', 'masa': 614, 'roz': 25},\n",
+       " {'id': '1110', 'typ': 'CVW', 'masa': 383, 'roz': 22},\n",
+       " {'id': '1110', 'typ': 'VUG', 'masa': 1839, 'roz': 17},\n",
+       " {'id': '0001', 'typ': 'AVW', 'masa': 932, 'roz': 21},\n",
+       " {'id': '1011', 'typ': 'VVU', 'masa': 1977, 'roz': 23},\n",
+       " {'id': '0010', 'typ': 'GCV', 'masa': 259, 'roz': 25},\n",
+       " {'id': '0100', 'typ': 'NVA', 'masa': 1046, 'roz': 3},\n",
+       " {'id': '1001', 'typ': 'NWW', 'masa': 1087, 'roz': 18},\n",
+       " {'id': '0000', 'typ': 'NWG', 'masa': 661, 'roz': 13},\n",
+       " {'id': '0101', 'typ': 'GWN', 'masa': 415, 'roz': 3},\n",
+       " {'id': '1111', 'typ': 'VUW', 'masa': 1313, 'roz': 17},\n",
+       " {'id': '0100', 'typ': 'CGU', 'masa': 1797, 'roz': 5},\n",
+       " {'id': '0111', 'typ': 'WWC', 'masa': 1821, 'roz': 26},\n",
+       " {'id': '0011', 'typ': 'UWN', 'masa': 1939, 'roz': 20},\n",
+       " {'id': '0000', 'typ': 'GGN', 'masa': 966, 'roz': 11},\n",
+       " {'id': '0100', 'typ': 'WGN', 'masa': 1305, 'roz': 10},\n",
+       " {'id': '1110', 'typ': 'WUA', 'masa': 511, 'roz': 19}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,17 +406,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=1010 {'id': '1010', 'typ': 'UUW', 'masa': 1120, 'roz': 12}\n",
-      "id=1111 {'id': '1111', 'typ': 'WNV', 'masa': 1907, 'roz': 11}\n",
-      "id=['1010', '1011', '1111']\n",
-      " [{'id': '1010', 'typ': 'UUW', 'masa': 1120, 'roz': 12}, None, {'id': '1111', 'typ': 'WNV', 'masa': 1907, 'roz': 11}]\n"
+      "1010\n",
+      "10\n",
+      "15\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "id=1010 {'id': '1010', 'typ': 'NCV', 'masa': 545, 'roz': 4}\n",
+      "1111\n",
+      "10\n",
+      "15\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6272/1918015432.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'id=1010'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbinary_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1010'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'id=1111'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbinary_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1111'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"id=['1010', '1011', '1111']\\n\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbinary_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'1010'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1011'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1101'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6272/1918015432.py\u001b[0m in \u001b[0;36mbinary_search\u001b[1;34m(w, value, feature)\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmax_index\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mmin_index\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m//\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -438,20 +459,22 @@
     "        for v in value:\n",
     "            results.append(binary_search(w, v, feature))\n",
     "        return results\n",
-    "\n",
+    "    \n",
+    "    print(value)\n",
     "    while index != (max_index + min_index) // 2:\n",
     "        index = (max_index + min_index) // 2\n",
-    "        if w[index]['id'] == value:\n",
+    "        print(index)\n",
+    "        if w[index][feature] == value:\n",
     "            return w[index]\n",
-    "        elif w[index]['id'] <= value:\n",
+    "        elif w[index][feature] < value:\n",
     "            min_index = index+1\n",
-    "        elif w[index]['id'] >= value:\n",
+    "        elif w[index][feature] > value:\n",
     "            max_index = index-1\n",
     "\n",
     "\n",
     "print('id=1010', binary_search(vector, '1010', 'id'))\n",
     "print('id=1111', binary_search(vector, '1111', 'id'))\n",
-    "print(\"id=['1010', '1011', '1111']\\n\", binary_search(vector, ['1010', '1011', '1111'], 'id'))"
+    "print(\"id=['1010', '1011', '1111']\\n\", binary_search(vector, ['1010', '1011', '1101'], 'id'))"
    ]
   },
   {
@@ -484,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,18 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'id': '0010', 'typ': 'GUG', 'masa': 728, 'roz': 3}, {'id': '0011', 'typ': 'AWC', 'masa': 1995, 'roz': 7}, {'id': '1111', 'typ': 'GAG', 'masa': 1468, 'roz': 6}, {'id': '0111', 'typ': 'NCN', 'masa': 1046, 'roz': 19}, {'id': '0110', 'typ': 'WAA', 'masa': 1628, 'roz': 18}, {'id': '0011', 'typ': 'AUN', 'masa': 1844, 'roz': 28}, {'id': '0111', 'typ': 'WAU', 'masa': 592, 'roz': 15}, {'id': '0010', 'typ': 'CGA', 'masa': 1564, 'roz': 20}, {'id': '0110', 'typ': 'UNW', 'masa': 401, 'roz': 18}, {'id': '1000', 'typ': 'UWU', 'masa': 1719, 'roz': 3}]\n",
-      "[{'id': '0110', 'typ': 'WAA', 'masa': 1628, 'roz': 18}, {'id': '0111', 'typ': 'WAU', 'masa': 592, 'roz': 15}, {'id': '0110', 'typ': 'UNW', 'masa': 401, 'roz': 18}, {'id': '0010', 'typ': 'CGA', 'masa': 1564, 'roz': 20}, {'id': '0011', 'typ': 'AUN', 'masa': 1844, 'roz': 28}, {'id': '1000', 'typ': 'UWU', 'masa': 1719, 'roz': 3}, {'id': '1111', 'typ': 'GAG', 'masa': 1468, 'roz': 6}, {'id': '0111', 'typ': 'NCN', 'masa': 1046, 'roz': 19}, {'id': '0010', 'typ': 'GUG', 'masa': 728, 'roz': 3}, {'id': '0011', 'typ': 'AWC', 'masa': 1995, 'roz': 7}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "robots = create_m_bots(10)\n",
     "robots = [r.save_robot() for r in robots]\n",
@@ -577,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,38 +637,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Binarne wyszukiwanie zbioru wartości dla parametr: id o wartości: 0001\n",
-      "Indeksy:\n",
-      "[1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '0000', 'typ': 'CGA', 'masa': 678, 'roz': 19},\n",
-       " {'id': '0001', 'typ': 'UAV', 'masa': 970, 'roz': 9},\n",
-       " {'id': '0010', 'typ': 'AUU', 'masa': 359, 'roz': 23},\n",
-       " {'id': '0011', 'typ': 'CNC', 'masa': 1489, 'roz': 25},\n",
-       " {'id': '0011', 'typ': 'WVV', 'masa': 562, 'roz': 21},\n",
-       " {'id': '0100', 'typ': 'NCG', 'masa': 1150, 'roz': 18},\n",
-       " {'id': '0101', 'typ': 'AVN', 'masa': 679, 'roz': 29},\n",
-       " {'id': '0110', 'typ': 'GWU', 'masa': 339, 'roz': 29},\n",
-       " {'id': '0110', 'typ': 'AGG', 'masa': 294, 'roz': 20},\n",
-       " {'id': '1001', 'typ': 'GGC', 'masa': 1963, 'roz': 3}]"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# wyszukaanie indeksu robota o zadanej cesze\n",
     "val = '0001'\n",
@@ -667,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,19 +687,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Binarne wyszukiwanie zbioru wartości dla parametr: masa z przedziału: [100, 1000]\n",
-      "Indeksy:\n",
-      "[0, 1, 2, 3, 4, 5, 6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# wyszukanie indeksów robotów o cechach z zadanego przedziału\n",
     "feat = 'masa'\n",
@@ -727,29 +702,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '0110', 'typ': 'AGG', 'masa': 294, 'roz': 20},\n",
-       " {'id': '0110', 'typ': 'GWU', 'masa': 339, 'roz': 29},\n",
-       " {'id': '0010', 'typ': 'AUU', 'masa': 359, 'roz': 23},\n",
-       " {'id': '0011', 'typ': 'WVV', 'masa': 562, 'roz': 21},\n",
-       " {'id': '0000', 'typ': 'CGA', 'masa': 678, 'roz': 19},\n",
-       " {'id': '0101', 'typ': 'AVN', 'masa': 679, 'roz': 29},\n",
-       " {'id': '0001', 'typ': 'UAV', 'masa': 970, 'roz': 9},\n",
-       " {'id': '0100', 'typ': 'NCG', 'masa': 1150, 'roz': 18},\n",
-       " {'id': '0011', 'typ': 'CNC', 'masa': 1489, 'roz': 25},\n",
-       " {'id': '1001', 'typ': 'GGC', 'masa': 1963, 'roz': 3}]"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted(vector, key=lambda x: x[feat])"
    ]
@@ -768,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,17 +835,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 21, 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pożadane cechy\n",
     "desired_features = {\n",
@@ -905,22 +852,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indexy robotów spełniajaćych kryteria\n",
-      "{1, 21, 5}\n",
-      "Roboty spełniające wymagania\n",
-      "{'id': '0011', 'typ': 'WCW', 'masa': 1974, 'roz': 11}\n",
-      "{'id': '0101', 'typ': 'UNU', 'masa': 1415, 'roz': 16}\n",
-      "{'id': '0101', 'typ': 'WUU', 'masa': 750, 'roz': 12}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Indexy robotów spełniajaćych kryteria')\n",
     "print(result_i)\n",
