--- a/Lista_6_PD.ipynb
+++ b/Lista_6_PD.ipynb
@@ -126,27 +126,27 @@
      "output_type": "stream",
      "text": [
       "     id  typ    masa   roz\n",
-      "0  1011  AWA   789.0   1.0\n",
-      "1  0100  UGC  1253.0  11.0\n",
-      "2  0001  WGG  1643.0  17.0\n",
-      "3  1100  WNW  1758.0  14.0\n",
-      "4  1100  VNC   271.0  25.0\n",
-      "5  1111  VWV  1769.0   9.0\n",
-      "6  1101  VAA  1547.0  18.0\n",
-      "7  1011  WVG   142.0   4.0\n",
-      "8  1011  VNV   311.0  25.0\n",
-      "9  0100  VVW  1158.0  16.0\n",
+      "0  1100  GCC   848.0  27.0\n",
+      "1  1111  VWA    50.0  29.0\n",
+      "2  0110  AGA    57.0  13.0\n",
+      "3  0000  VUW  1418.0  16.0\n",
+      "4  0001  VGG   955.0   8.0\n",
+      "5  1011  UVU  1711.0  26.0\n",
+      "6  0000  UCW   322.0  19.0\n",
+      "7  0100  WNN  1123.0  18.0\n",
+      "8  1010  UGV  1332.0  26.0\n",
+      "9  1000  WGU   192.0   9.0\n",
       "   Unnamed: 0    id  typ    masa   roz\n",
-      "0           0  1011  AWA   789.0   1.0\n",
-      "1           1   100  UGC  1253.0  11.0\n",
-      "2           2     1  WGG  1643.0  17.0\n",
-      "3           3  1100  WNW  1758.0  14.0\n",
-      "4           4  1100  VNC   271.0  25.0\n",
-      "5           5  1111  VWV  1769.0   9.0\n",
-      "6           6  1101  VAA  1547.0  18.0\n",
-      "7           7  1011  WVG   142.0   4.0\n",
-      "8           8  1011  VNV   311.0  25.0\n",
-      "9           9   100  VVW  1158.0  16.0\n"
+      "0           0  1100  GCC   848.0  27.0\n",
+      "1           1  1111  VWA    50.0  29.0\n",
+      "2           2   110  AGA    57.0  13.0\n",
+      "3           3     0  VUW  1418.0  16.0\n",
+      "4           4     1  VGG   955.0   8.0\n",
+      "5           5  1011  UVU  1711.0  26.0\n",
+      "6           6     0  UCW   322.0  19.0\n",
+      "7           7   100  WNN  1123.0  18.0\n",
+      "8           8  1010  UGV  1332.0  26.0\n",
+      "9           9  1000  WGU   192.0   9.0\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,35 +354,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': '1100', 'typ': 'VUA', 'masa': 1411, 'roz': 12},\n",
-       " {'id': '0000', 'typ': 'CAC', 'masa': 387, 'roz': 28},\n",
-       " {'id': '0001', 'typ': 'AAC', 'masa': 1197, 'roz': 28},\n",
-       " {'id': '1011', 'typ': 'AGV', 'masa': 614, 'roz': 25},\n",
-       " {'id': '1110', 'typ': 'CVW', 'masa': 383, 'roz': 22},\n",
-       " {'id': '1110', 'typ': 'VUG', 'masa': 1839, 'roz': 17},\n",
-       " {'id': '0001', 'typ': 'AVW', 'masa': 932, 'roz': 21},\n",
-       " {'id': '1011', 'typ': 'VVU', 'masa': 1977, 'roz': 23},\n",
-       " {'id': '0010', 'typ': 'GCV', 'masa': 259, 'roz': 25},\n",
-       " {'id': '0100', 'typ': 'NVA', 'masa': 1046, 'roz': 3},\n",
-       " {'id': '1001', 'typ': 'NWW', 'masa': 1087, 'roz': 18},\n",
-       " {'id': '0000', 'typ': 'NWG', 'masa': 661, 'roz': 13},\n",
-       " {'id': '0101', 'typ': 'GWN', 'masa': 415, 'roz': 3},\n",
-       " {'id': '1111', 'typ': 'VUW', 'masa': 1313, 'roz': 17},\n",
-       " {'id': '0100', 'typ': 'CGU', 'masa': 1797, 'roz': 5},\n",
-       " {'id': '0111', 'typ': 'WWC', 'masa': 1821, 'roz': 26},\n",
-       " {'id': '0011', 'typ': 'UWN', 'masa': 1939, 'roz': 20},\n",
-       " {'id': '0000', 'typ': 'GGN', 'masa': 966, 'roz': 11},\n",
-       " {'id': '0100', 'typ': 'WGN', 'masa': 1305, 'roz': 10},\n",
-       " {'id': '1110', 'typ': 'WUA', 'masa': 511, 'roz': 19}]"
+       "[{'id': '0011', 'typ': 'NAG', 'masa': 1350, 'roz': 21},\n",
+       " {'id': '1100', 'typ': 'WCG', 'masa': 1650, 'roz': 12},\n",
+       " {'id': '0101', 'typ': 'VVN', 'masa': 1854, 'roz': 29},\n",
+       " {'id': '0101', 'typ': 'VAG', 'masa': 1273, 'roz': 26},\n",
+       " {'id': '1111', 'typ': 'GGA', 'masa': 110, 'roz': 8},\n",
+       " {'id': '0110', 'typ': 'WGA', 'masa': 1962, 'roz': 14},\n",
+       " {'id': '1110', 'typ': 'WGA', 'masa': 1745, 'roz': 6},\n",
+       " {'id': '0100', 'typ': 'WWW', 'masa': 1832, 'roz': 19},\n",
+       " {'id': '0110', 'typ': 'WNA', 'masa': 596, 'roz': 13},\n",
+       " {'id': '1100', 'typ': 'VWG', 'masa': 447, 'roz': 5},\n",
+       " {'id': '0000', 'typ': 'AGU', 'masa': 1137, 'roz': 20},\n",
+       " {'id': '0011', 'typ': 'GGW', 'masa': 1647, 'roz': 12},\n",
+       " {'id': '1110', 'typ': 'NVU', 'masa': 374, 'roz': 20},\n",
+       " {'id': '1111', 'typ': 'NCC', 'masa': 1100, 'roz': 7},\n",
+       " {'id': '1101', 'typ': 'WVC', 'masa': 1138, 'roz': 8},\n",
+       " {'id': '1110', 'typ': 'NCV', 'masa': 413, 'roz': 8},\n",
+       " {'id': '0100', 'typ': 'WCA', 'masa': 672, 'roz': 5},\n",
+       " {'id': '1101', 'typ': 'CVV', 'masa': 1715, 'roz': 7},\n",
+       " {'id': '1000', 'typ': 'GAA', 'masa': 906, 'roz': 11},\n",
+       " {'id': '1001', 'typ': 'WVV', 'masa': 1956, 'roz': 12}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -417,27 +417,33 @@
       "10\n",
       "15\n",
       "12\n",
-      "13\n",
-      "14\n",
-      "id=1010 {'id': '1010', 'typ': 'NCV', 'masa': 545, 'roz': 4}\n",
+      "11\n",
+      "10\n",
+      "id=1010 None\n",
       "1111\n",
       "10\n",
       "15\n",
       "18\n",
-      "19\n",
-      "20\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6272/1918015432.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'id=1010'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbinary_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1010'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'id=1111'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbinary_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1111'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"id=['1010', '1011', '1111']\\n\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbinary_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'1010'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1011'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'1101'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6272/1918015432.py\u001b[0m in \u001b[0;36mbinary_search\u001b[1;34m(w, value, feature)\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmax_index\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mmin_index\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m//\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "id=1111 {'id': '1111', 'typ': 'GGA', 'masa': 110, 'roz': 8}\n",
+      "1010\n",
+      "10\n",
+      "15\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "1011\n",
+      "10\n",
+      "15\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "1101\n",
+      "10\n",
+      "15\n",
+      "12\n",
+      "13\n",
+      "id=['1010', '1011', '1111']\n",
+      " [None, None, {'id': '1101', 'typ': 'WVC', 'masa': 1138, 'roz': 8}]\n"
      ]
     }
    ],
@@ -507,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,9 +560,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': '0110', 'typ': 'GNU', 'masa': 890, 'roz': 7}, {'id': '1011', 'typ': 'UVU', 'masa': 563, 'roz': 13}, {'id': '1110', 'typ': 'CUG', 'masa': 555, 'roz': 13}, {'id': '0110', 'typ': 'UCA', 'masa': 1238, 'roz': 21}, {'id': '0000', 'typ': 'AGN', 'masa': 1750, 'roz': 25}, {'id': '1110', 'typ': 'VVA', 'masa': 98, 'roz': 29}, {'id': '1010', 'typ': 'VWW', 'masa': 767, 'roz': 15}, {'id': '0001', 'typ': 'ANW', 'masa': 225, 'roz': 18}, {'id': '0111', 'typ': 'UGA', 'masa': 474, 'roz': 13}, {'id': '1000', 'typ': 'GWU', 'masa': 124, 'roz': 28}]\n",
+      "[{'id': '1010', 'typ': 'VWW', 'masa': 767, 'roz': 15}, {'id': '0110', 'typ': 'UCA', 'masa': 1238, 'roz': 21}, {'id': '1110', 'typ': 'VVA', 'masa': 98, 'roz': 29}, {'id': '0001', 'typ': 'ANW', 'masa': 225, 'roz': 18}, {'id': '1000', 'typ': 'GWU', 'masa': 124, 'roz': 28}, {'id': '1110', 'typ': 'CUG', 'masa': 555, 'roz': 13}, {'id': '0000', 'typ': 'AGN', 'masa': 1750, 'roz': 25}, {'id': '0111', 'typ': 'UGA', 'masa': 474, 'roz': 13}, {'id': '0110', 'typ': 'GNU', 'masa': 890, 'roz': 7}, {'id': '1011', 'typ': 'UVU', 'masa': 563, 'roz': 13}]\n"
+     ]
+    }
+   ],
    "source": [
     "robots = create_m_bots(10)\n",
     "robots = [r.save_robot() for r in robots]\n",
@@ -567,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,9 +652,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binarne wyszukiwanie zbioru wartości dla parametr: id o wartości: 0001\n",
+      "Indeksy:\n",
+      "[1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '0000', 'typ': 'WAA', 'masa': 1016, 'roz': 22},\n",
+       " {'id': '0001', 'typ': 'WGG', 'masa': 1410, 'roz': 28},\n",
+       " {'id': '0010', 'typ': 'WAV', 'masa': 737, 'roz': 4},\n",
+       " {'id': '0100', 'typ': 'VUU', 'masa': 1884, 'roz': 22},\n",
+       " {'id': '1000', 'typ': 'NWG', 'masa': 895, 'roz': 29},\n",
+       " {'id': '1000', 'typ': 'CCU', 'masa': 556, 'roz': 14},\n",
+       " {'id': '1001', 'typ': 'NWA', 'masa': 777, 'roz': 6},\n",
+       " {'id': '1011', 'typ': 'GCN', 'masa': 1152, 'roz': 22},\n",
+       " {'id': '1100', 'typ': 'WAA', 'masa': 1182, 'roz': 25},\n",
+       " {'id': '1110', 'typ': 'UGG', 'masa': 1310, 'roz': 5}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# wyszukaanie indeksu robota o zadanej cesze\n",
     "val = '0001'\n",
@@ -652,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,9 +731,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binarne wyszukiwanie zbioru wartości dla parametr: masa z przedziału: [100, 1000]\n",
+      "Indeksy:\n",
+      "[0, 1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# wyszukanie indeksów robotów o cechach z zadanego przedziału\n",
     "feat = 'masa'\n",
@@ -702,9 +756,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '1000', 'typ': 'CCU', 'masa': 556, 'roz': 14},\n",
+       " {'id': '0010', 'typ': 'WAV', 'masa': 737, 'roz': 4},\n",
+       " {'id': '1001', 'typ': 'NWA', 'masa': 777, 'roz': 6},\n",
+       " {'id': '1000', 'typ': 'NWG', 'masa': 895, 'roz': 29},\n",
+       " {'id': '0000', 'typ': 'WAA', 'masa': 1016, 'roz': 22},\n",
+       " {'id': '1011', 'typ': 'GCN', 'masa': 1152, 'roz': 22},\n",
+       " {'id': '1100', 'typ': 'WAA', 'masa': 1182, 'roz': 25},\n",
+       " {'id': '1110', 'typ': 'UGG', 'masa': 1310, 'roz': 5},\n",
+       " {'id': '0001', 'typ': 'WGG', 'masa': 1410, 'roz': 28},\n",
+       " {'id': '0100', 'typ': 'VUU', 'masa': 1884, 'roz': 22}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sorted(vector, key=lambda x: x[feat])"
    ]
@@ -723,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,9 +909,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{19}\n"
+     ]
+    }
+   ],
    "source": [
     "# pożadane cechy\n",
     "desired_features = {\n",
@@ -852,9 +934,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexy robotów spełniajaćych kryteria\n",
+      "{19}\n",
+      "Roboty spełniające wymagania\n",
+      "{'id': '0101', 'typ': 'NVC', 'masa': 1550, 'roz': 18}\n"
+     ]
+    }
+   ],
    "source": [
     "print('Indexy robotów spełniajaćych kryteria')\n",
     "print(result_i)\n",
